Updated '_data/people_jobs.yml' via CloudCannon

--- a/_data/people_jobs.yml
+++ b/_data/people_jobs.yml
@@ -1,8 +1,8 @@
 - name: Dave
   job: Programmer
-- name: About
+- name: Aurora
   job: marketing
-- name: Contact
+- name: Jill
   job: accounts
-- name: Doubt
+- name: Nick
   job: sales
