--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,10 @@ defaults:
 
 # -----------
 # CloudCannon
-
+_editable_regions:
+  image:
+    url_src: true
+    
 social_icons:
   - Facebook
   - Google Plus
