--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,14 @@ paginate: 10
 paginate_path: "/blog/:num/"
 
 jekyll-archives:
-  enabled: ['categories']
+  enabled: ['categories','tags']
+  layout: 'archive'
+  permalinks:
+    #year: '/:year/'
+    #month: '/:year/:month/'
+    #day: '/:year/:month/:day/'
+    tag: '/tag/:name/'
+    category: '/category/:name/'
 
 defaults:
   -
